GNOME Bugzilla – Bug 758448
Memory leak in g_irepository_get_dependencies()
Last modified: 2015-11-23 05:18:25 UTC
The transitive_dependencies GHashTable is leaked.
Created attachment 316012 [details] [review] girepository: Fix memory leak in g_irepository_get_dependencies()
Review of attachment 316012 [details] [review]: LGTM, thanks!