girepository: Fix memory leak in g_irepository_get_dependencies()

The transitive_dependencies GHashTable was being leaked.

https://bugzilla.gnome.org/show_bug.cgi?id=758448